Change consulta-veicular component

--- a/src/app/pages/consulta-veicular/consulta-veicular.component.html
+++ b/src/app/pages/consulta-veicular/consulta-veicular.component.html
@@ -1,7 +1,6 @@
 <section class="vehicle-page">
   <div class="hero">
     <div class="hero-text" @fadeUp>
-      <p class="eyebrow">Consulta veicular</p>
       <h1>
         Consulte débitos pelo <span class="highlight">RENAVAM</span> do seu veículo
       </h1>
@@ -45,7 +44,7 @@
 
           <button type="button" class="btn submit">
             <i class="fa-solid fa-eye"></i>
-            Ver débitos agora
+            Consultar veículo
           </button>
         </form>
 
@@ -125,15 +124,6 @@
         <div class="stars">
           <i class="fa-solid fa-star" *ngFor="let _ of [1,2,3,4,5]"></i>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="section sources-section alt">
-    <div class="section-inner sources" @fadeUp>
-      <p class="sources-title">Fontes de dados oficiais</p>
-      <div class="source-chips">
-        <span class="source" *ngFor="let source of sources">{{ source }}</span>
       </div>
     </div>
   </div>
