--- a/src/app/pages/consulta-veicular/consulta-veicular.component.html
+++ b/src/app/pages/consulta-veicular/consulta-veicular.component.html
@@ -43,7 +43,7 @@
           </div>
 
           <button type="button" class="btn submit">
-            <i class="fa-solid fa-eye"></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
             Consultar veículo
           </button>
         </form>
